cmake_minimum_required(VERSION 2.6)
project(lime)

INCLUDE(FindPkgConfig)

PKG_CHECK_MODULES (EINA REQUIRED eina)
PKG_CHECK_MODULES (EVAS REQUIRED evas)
PKG_CHECK_MODULES (ECORE REQUIRED ecore)
PKG_CHECK_MODULES (ELM REQUIRED elementary)
PKG_CHECK_MODULES (LCMS REQUIRED lcms2)
PKG_CHECK_MODULES (EIO REQUIRED eio)
PKG_CHECK_MODULES (EXIF REQUIRED libexif)
PKG_CHECK_MODULES (EXEMPI REQUIRED exempi-2.0)
PKG_CHECK_MODULES (SWSCALE REQUIRED libswscale)
FIND_PACKAGE(TIFF REQUIRED)
FIND_PACKAGE(JPEG REQUIRED)

find_package (Threads)

set(CMAKE_C_FLAGS "-Wall -g -O3 -fno-omit-frame-pointer")

add_subdirectory(src/lib)
add_subdirectory(src/bin)
